* Fix Z-Index preventing search modal from displaying properly.

--- a/theme/css/gdc-common.css
+++ b/theme/css/gdc-common.css
@@ -239,7 +239,7 @@ code {
   width: 100%;
   height: 64px;
   max-width: 1280px;
-  z-index: 99999;
+  z-index: 999;
 }
 
 .navbar-default:before {
